# rubric

./: .cursorrules  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  anim_trans_diff.json  pptx_diff.json  pyproject.toml
rubric/: __init__.py
rubric/core/: __init__.py  base.py  checklist.py  node.py  scorer.py  tree.py
rubric/core/prompts/: generate-rubric-checklist-fast-system.jinja  generate-rubric-checklist-fast-user.jinja
rubric/examples/: __init__.py  basic_examples.py
rubric/generate/: __init__.py  tree_generator.py
rubric/prompts/: generate-rubric-checklist-fast-system.jinja  generate-rubric-tree-system.jinja  generate-tree-rubric-system.jinja
rubric/utils/: __init__.py  llm_client.py  llm_tools.py  visualizer.py
scripts/: demo_rubric.py  demo_visualization.py
tests/: test_async_evaluation.py  test_prompt_retriever.py  test_rubric_system.py  test_stale_reasons.py
try_scripts/: try_create_rubric_tree.py  try_ppt_diff.py
