[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rubric"]

[project]
name = "rubric-ai"
version = "0.1.0"
description = "Structured verification with LLMs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
]
visualization = [
    "plotly>=5.0.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]